distconf/libdistconf/libdistconf.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package github.com/Bastien-Antigravity/distributed-config/src/cgo_bridge */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 3 "config.go"

#include <stdlib.h>

// Define the callback type for C
typedef void (*config_update_cb)(uintptr_t handle, const char* json_data);

// Helper to safely execute a C callback from Go
static void call_config_update_cb(config_update_cb cb, uintptr_t handle, const char* json_data) {
    if (cb != NULL) {
        cb(handle, json_data);
    }
}

#line 1 "cgo-generated-wrapper"

#line 3 "initialize.go"

#include <stdlib.h>

#line 1 "cgo-generated-wrapper"

#line 3 "networking.go"

#include <stdlib.h>

#line 1 "cgo-generated-wrapper"

#line 3 "sanitizer.go"

#include <stdlib.h>

#line 1 "cgo-generated-wrapper"

#line 3 "security.go"

#include <stdlib.h>

#line 1 "cgo-generated-wrapper"

#line 3 "validation.go"

#include <stdlib.h>

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern char* DistConf_Get(GoUintptr handle, char* section, char* key);
extern GoInt DistConf_Set(GoUintptr handle, char* section, char* key, char* value);
extern GoInt DistConf_Sync(GoUintptr handle);
extern void DistConf_OnLiveConfUpdate(GoUintptr handle, config_update_cb cb);
extern void DistConf_OnRegistryUpdate(GoUintptr handle, config_update_cb cb);
extern GoInt DistConf_ShareConfig(GoUintptr handle, char* json_data);
extern GoUintptr DistConf_New(char* profile);
extern void DistConf_Close(GoUintptr handle);
extern char* DistConf_GetAddress(GoUintptr handle, char* capability);
extern char* DistConf_GetGRPCAddress(GoUintptr handle, char* capability);
extern char* DistConf_GetCapability(GoUintptr handle, char* capability);
extern char* DistConf_GetFullConfig(GoUintptr handle);
extern void DistConf_FreeString(char* ptr);
extern char* DistConf_Decrypt(GoUintptr handle, char* ciphertext);
extern GoInt DistConf_ValidateMandatoryServices(GoUintptr handle);

#ifdef __cplusplus
}
#endif